# ChatPDF

./: .gitignore  README.md  chatPDF_Mistral7B.py  chatPDF_OpenAI.py  pyproject.toml
RAG/: indexing.py  loading.py  model.py  parent_child_retrieval.py  query.py  storing.py
