[tool.poetry]
name = "chatpdf-poetry"
version = "0.1.0"
description = "simple RAG approach on localllm"
authors = ["ROHIT DAS <rdas.879@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatpdf_poetry"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
llama-index = "^0.9.26"
chromadb = "^0.4.22"
torch = "^2.1.2"
transformers = "^4.36.2"
llama-hub = "^0.0.67"
chardet = "^5.2.0"
pypdf = "^3.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
